# Course_Work_5

./: .gitignore  README.md  main.py  pyproject.toml
src/: DB_class.py  get_vacancy.py
