[tool.poetry]
name = "course_work_5"
version = "0.1.0"
description = ""
authors = ["Andrey Bolotin <andrejbolotin138@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
load-dotenv = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
